# GenconMiner

./: .gitignore  pyproject.toml  scripts.py
html_content_miner/: GenconMiner.py
tests/: test_html_content_miner.py
